[package]
name = "sfu"
version = "0.20.0-rc.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Rusty Rain <y@liu.mx>"]
repository = "https://github.com/webrtc-rs/sfu"
homepage = "https://sfu.rs"
description = "SFU in Rust with Sans-IO"
keywords = ["networking", "protocols", "webrtc", "sans-io", "sfu"]
categories = ["network-programming", "asynchronous", "multimedia"]

[dependencies]
apprtc = { version = "0.20.0-rc.1", path = "apprtc" }
signaling = { version = "0.20.0-rc.1", path = "signaling" }
rtc = { version = "0.20.0-rc.1", path = "rtc/rtc" }
sansio = "1"
bytes = "1.12.0"
log = "0.4.33"

[dev-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.11"
chrono = "0.4.45"
anyhow = "1"
rouille = { version = "3.6", features = ["ssl"] }
systemstat = "0.2"

wg = "0.7"
crossbeam-channel = "0.5"
ctrlc = "3.4"

hyper = { version = "0.14.32", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.52.3", features = ["full"] }

[[example]]
name = "chat"
path = "examples/chat.rs"