[package]
name = "sfu"
version = "0.20.0-rc.3"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Rusty Rain <y@liu.mx>"]
repository = "https://github.com/webrtc-rs/sfu"
homepage = "https://sfu.rs"
description = "SFU in Rust with Sans-IO"
keywords = ["networking", "protocols", "webrtc", "sans-io", "sfu"]
categories = ["network-programming", "asynchronous", "multimedia"]

[dependencies]
rtc = { version = "0.20.0-rc.3", path = "webrtc/rtc/rtc" }

sansio = "1.0.1"
bytes = "1.12.0"
log = "0.4.33"
rand = "0.10.1"

[dev-dependencies]
webrtc = { version = "0.20.0-rc.3", path = "webrtc" }

clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.11"
chrono = "0.4.45"
anyhow = "1.0.103"
tungstenite = "0.30.0"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2.0"
systemstat = "0.2.7"
wg = "1.1.0"
crossbeam-channel = "0.5.16"
ctrlc = "3.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
async-trait = "0.1"

[[example]]
name = "chat"
path = "examples/chat.rs"
