[package]
name = "sfu-driver"
version = "0.20.0-rc.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "I/O driver for the sans-IO SFU engine"

[dependencies]
sfu-engine = { path = "../sfu-engine" }
apprtc.workspace = true
